--- a/codgen-cmd/pom.xml
+++ b/codgen-cmd/pom.xml
@@ -12,16 +12,16 @@
     <artifactId>codgen-cmd</artifactId>
 
     <properties>
-        <!--        <java.version>20</java.version>-->
-        <imageName>codgen-cmd</imageName>
-        <mainClass>com.github.codgen.CodgenApplication</mainClass>
-
         <native.maven.plugin.version>0.9.23</native.maven.plugin.version>
         <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
         <build-helper-maven-plugin.version>3.4.0</build-helper-maven-plugin.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.github.codgen</groupId>
+            <artifactId>codgen-core</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.github.rebue.wheel</groupId>
             <artifactId>wheel-core</artifactId>
@@ -41,6 +41,12 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.33</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
@@ -101,7 +107,9 @@
 
     <profiles>
         <profile>
-            <!-- 生成native-image的配置文件需要(因为是利用test插件生成，所以不能skip test) -->
+            <!-- 生成native-image的配置文件需要 -->
+            <!-- 因为是利用test插件生成，所以不能skip test -->
+            <!-- maven命令使用test，并最好加上 '-Dtest=CodgenApplicationTests#testMain' 参数限定测试的方法 -->
             <id>gen-native-image-configs</id>
             <build>
                 <plugins>
@@ -112,6 +120,9 @@
                         <version>${maven-surefire-plugin.version}</version>
                         <configuration>
                             <argLine>-agentlib:native-image-agent=config-output-dir=src/main/resources/META-INF/native-image</argLine>
+                            <includes>
+                                <include>**/CodgenApplicationTests.java</include>
+                            </includes>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -145,37 +156,20 @@
                             </execution>
                         </executions>
                         <configuration>
-                            <!--                            <mainClass>${mainClass}</mainClass>-->
-<!--                            <agent>-->
-<!--                                &lt;!&ndash; 启用native-image-agent &ndash;&gt;-->
-<!--                                <enabled>true</enabled>-->
-<!--                                <defaultMode>direct</defaultMode>-->
-<!--                                <modes>-->
-<!--                                    <direct>config-output-dir=META-INF/native-image</direct>-->
-<!--                                </modes>-->
-<!--                                &lt;!&ndash;                                <metadataCopy>&ndash;&gt;-->
-<!--                                &lt;!&ndash;                                    <outputDirectory>src/main/resources/META-INF/native-image</outputDirectory>&ndash;&gt;-->
-<!--                                &lt;!&ndash;                                </metadataCopy>&ndash;&gt;-->
-<!--                            </agent>-->
+                            <buildArgs>
+                                <!-- 建立独立镜像，不成功则报告失败 -->
+                                <buildArg>--no-fallback</buildArg>
+                                <!-- 指定native-image配置文件的目录(此目录由maven编译gen-native-image-configs生成) -->
+                                <buildArg>-H:ConfigurationFileDirectories=src/main/resources/META-INF/native-image/</buildArg>
+                                <!-- 级别设置为3，打包时输出包含的资源文件 -->
+                                <buildArg>-H:Log=registerResource:3</buildArg>
+                            </buildArgs>
                             <!-- native-image编译时输出详细的日志 -->
                             <verbose>true</verbose>
                             <!-- 生成调试信息 -->
                             <debug>true</debug>
                             <!-- 快速编译 -->
                             <quickBuild>true</quickBuild>
-                            <buildArgs>
-                                <!-- 打包时包含的资源文件 -->
-                                <buildArg>-H:IncludeResources=conf/pom.properties</buildArg>
-                                <!-- 建立独立镜像，不成功则报告失败 -->
-                                <buildArg>--no-fallback</buildArg>
-                                <!-- 指定native-image配置文件的目录(此目录由maven编译gen-native-image-configs生成) -->
-                                <buildArg>-H:ConfigurationFileDirectories=src/main/resources/META-INF/native-image/</buildArg>
-                                <!--                                <buildArg>-H:ReflectionConfigurationFiles=src/main/resources/META-INF/native-image/reflect-config.json</buildArg>-->
-                                <!-- 级别设置为3，打包时输出包含的资源文件 -->
-                                <buildArg>-H:Log=registerResource:3</buildArg>
-                                <!--                                <buildArg>&#45;&#45;report-unsupported-elements-at-runtime</buildArg>-->
-                                <!--                                <buildArg>&#45;&#45;link-at-build-time</buildArg>-->
-                            </buildArgs>
                         </configuration>
                     </plugin>
                 </plugins>
