--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>com.github.codgen</groupId>
+                <artifactId>codgen-core</artifactId>
+                <version>${version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.github.rebue.wheel</groupId>
                 <artifactId>wheel</artifactId>
                 <version>${wheel.version}</version>
