--- a/codgen-cmd/pom.xml
+++ b/codgen-cmd/pom.xml
@@ -12,6 +12,10 @@
     <artifactId>codgen-cmd</artifactId>
 
     <properties>
+        <maven.compiler.source>20</maven.compiler.source>
+        <maven.compiler.target>20</maven.compiler.target>
+        <mainClass>com.github.codgen.CodgenApplication</mainClass>
+
         <native.maven.plugin.version>0.9.23</native.maven.plugin.version>
         <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
         <build-helper-maven-plugin.version>3.4.0</build-helper-maven-plugin.version>
@@ -37,16 +41,16 @@
         </dependency>
 
         <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <version>8.0.33</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
@@ -56,6 +60,11 @@
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-launcher</artifactId>
             <version>1.9.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -164,6 +173,7 @@
                                 <!-- 级别设置为3，打包时输出包含的资源文件 -->
                                 <buildArg>-H:Log=registerResource:3</buildArg>
                             </buildArgs>
+                            <mainClass>${mainClass}</mainClass>
                             <!-- native-image编译时输出详细的日志 -->
                             <verbose>true</verbose>
                             <!-- 生成调试信息 -->
