--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,9 @@
     </modules>
 
     <properties>
-        <maven.compiler.source>20</maven.compiler.source>
-        <maven.compiler.target>20</maven.compiler.target>
+        <java.version>20</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <wheel.version>2.1.6</wheel.version>
@@ -39,6 +40,5 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
 
 </project>
