--- a/codgen-cmd/src/test/resources/in/codgen.yml
+++ b/codgen-cmd/src/test/resources/in/codgen.yml
@@ -1,29 +1,38 @@
+# jdbc的配置选项
 jdbc:
-  connect:
-    # 数据库连接字符串(MySQL5要想获取表的注释，必须设置useInformationSchema=true，据说8可以不设置)
-    url: jdbc:mysql://%s:%s/%s?useInformationSchema=true
-    # 数据库连接字符串要插入的参数
-    params:
-      # 主机地址
-      - 127.0.0.1
-      # 端口号
-      - 3306
-      # 数据库名称
-      - test
-    # 数据库的连接属性
-    properties:
-      # 用户名
-      user: test
-      # 密码
-      password: test
-  # 表名过滤的模式(不设置则获取所有的表)
-  tableName: TEST_A%
-beetl:
-  # 左定位符
-  DELIMITER_PLACEHOLDER_START: '${'
-  # 右定位符
-  DELIMITER_PLACEHOLDER_END: '}'
-  # 左定界符
-  DELIMITER_STATEMENT_START: '<%'
-  # 右定界符
-  DELIMITER_STATEMENT_END: '%>'
+  default:
+    connect:
+      # 数据库连接字符串(MySQL5要想获取表的注释，必须设置useInformationSchema=true，据说8可以不设置)
+      url: jdbc:mysql://%s:%s/%s?useInformationSchema=true
+      # 数据库连接字符串要插入的参数
+      params:
+        # 主机地址
+        - 127.0.0.1
+        # 端口号
+        - 3306
+        # 数据库名称
+        - test
+      # 数据库的连接属性
+      properties:
+        # 用户名
+        user: test
+        # 密码
+        password: test
+    # 表名过滤的模式(不设置则获取所有的表)
+    tableName: TEST_A%
+# 绑定的变量
+binding:
+  default:
+    # 项目名称
+    projectName: abc
+# groupTemplate的配置选项(不设置则启用默认配置)
+groupTemplate:
+  default:
+    # 左定位符
+    DELIMITER_PLACEHOLDER_START: '${'
+    # 右定位符
+    DELIMITER_PLACEHOLDER_END: '}'
+    # 左定界符
+    DELIMITER_STATEMENT_START: '<%'
+    # 右定界符
+    DELIMITER_STATEMENT_END: '%>'
