--- a/codgen-core/pom.xml
+++ b/codgen-core/pom.xml
@@ -40,7 +40,7 @@
 
         <dependency>
             <groupId>org.drools</groupId>
-            <artifactId>drools-ruleunits-engine</artifactId>
+            <artifactId>drools-engine</artifactId>
         </dependency>
         <dependency>
             <groupId>org.drools</groupId>
